Add new section.
README [Todo]:

* add new section Todo

--- a/README
+++ b/README
@@ -26,6 +26,7 @@ HTML <form> enctype Attribute
 Copying
 Changelog
 References
+Todo
 
 ================================================================================
 
@@ -1078,3 +1079,8 @@ HTML <form> enctype Attribute
 [1628339889] Refsnes  Data.   HTML  <form>  enctype Attribute.   2021.   --  URL
   <https://www.w3schools.com/TAGs/att_form_enctype.asp>    (online:   2021-08-07
   12:38:09 +0000)
+
+================================================================================
+
+Todo
+----
